Fixed issue where saved recipes wouldn't wrap to fit on the page

--- a/react-vite/src/components/RecipeBox/RecipeBox.css
+++ b/react-vite/src/components/RecipeBox/RecipeBox.css
@@ -70,4 +70,6 @@
 
 .saved-recipes-container {
     display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
 }
